Content/style updates: larger AI hero images, fix link underline, add 40px Extra header gap, minor tweaks across pages and script

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -599,8 +599,8 @@
                 <div class="nav-right">
                     <div class="nav-next">
                         <span class="text-body-sm next-project-label">Next →</span>
-                        <a class="next-project-link" href="evolve-owner-account.html" aria-label="Next project: Transforming the Owner Journey with a Seamless Experience">
-                            <span class="text-heading-5">Transforming the Owner Journey with a Seamless Experience</span>
+                        <a class="next-project-link" href="evolve-self-serve-cancellations.html" aria-label="Next project: Guided Self-Serve Cancellations Designed to Reduce Cost">
+                            <span class="text-heading-5">Guided Self-Serve Cancellations Designed to Reduce Cost</span>
                         </a>
                     </div>
                 </div>
