--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -444,7 +444,9 @@
             <div class="container">
                 <div class="discovery-image">
                     <p class="text-body-base-bold discovery-caption">Mapping out the end-to-end journey and identifying gaps in the experience</p>
-                    <div class="design-placeholder"></div>
+                    <div class="discovery-placeholder">
+                        <img src="assets/owner journeys.svg" alt="Owner journeys" style="width: 80%; height: auto; display: block; margin: 0 auto;"/>
+                    </div>
                 </div>
             </div>
         </section>
@@ -455,7 +457,7 @@
                 <div class="discovery-image">
                     <p class="text-body-base-bold discovery-caption">A snapshot into the information architecture: for new web</p>
                     <div class="discovery-placeholder">
-                        <img src="assets/evolve_oa_web IA.png" alt="OA web IA map" />
+                        <img src="assets/evolve_oa_web IA.png" alt="OA web IA map" style="width: 50%; height: auto; display: block; margin: 0 auto;"/>
                     </div>
                 </div>
             </div>
@@ -531,8 +533,8 @@
                 <div class="nav-left">
                     <div class="nav-prev">
                         <span class="text-body-sm prev-project-label">← Previous</span>
-                        <a class="prev-project-link" href="evolve-inbox.html" aria-label="Previous project: Reimagining Owner – Guest Communication with Inbox">
-                            <span class="text-heading-5">Streamlining Owner – Guest Communication with Inbox</span>
+                        <a class="prev-project-link" href="evolve-self-serve-cancellations.html" aria-label="Previous project: Guided Self-Serve Cancellations Designed to Reduce Cost">
+                            <span class="text-heading-5">Guided Self-Serve Cancellations Designed to Reduce Cost</span>
                         </a>
                     </div>
                 </div>
