--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                         <h3 class="text-heading-4">Streamlining Owner–Guest Communication with Inbox</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
+                    <a class="project-card" href="evolve-self-serve-cancellations.html">
+                        <div class="project-image">
+                            <img src="assets/evolve_cancellation_thumbnail2.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
+                        </div>
+                        <span class="project-badge">Launched</span>
+                        <h3 class="text-heading-4">Guided Self-Serve Cancellations Designed to Reduce Cost</h3>
+                        <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
+                    </a>
                     <a class="project-card" href="evolve-owner-account.html">
                         <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
                             <img src="assets/evolve_oa_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
@@ -85,14 +93,6 @@
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
-                    </a>
-                    <a class="project-card" href="evolve-self-serve-cancellations.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 3</div>
-                        </div>
-                        <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Guided Self-Serve Cancellations Designed to Reduce Cost</h3>
-                        <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
                     <a class="project-card" href="transamerica-app.html">
                         <div class="project-image">
@@ -126,7 +126,7 @@
             <div class="container">
                 <h3 class="text-heading-2">Curious about my process?</h3>
                 <p class="text-body-lg">AI is now baked into my foundational process as a creative sidekick. <br> It's not a shortcut — it's a way to work smarter and stay curious.</p>
-                <p><a href="ai-design.html" class="nav-link">Learn more</a></p>
+                <p><a href="ai-design.html">Learn more</a></p>
             </div>
         </section>
 
