--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
                     <a class="project-card" href="transamerica-app.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 4</div>
+                        <div class="project-image" style="background: #FFE8B3; display: grid; place-items: center; height: 200px; border-radius: 10px; overflow: hidden;">
+                            <img src="assets/transamerica_app_thumbnail.png" alt="Project thumbnail" style="width: 30%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
                     </a>
                     <a class="project-card" href="transamerica-workplace-experience.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 5</div>
+                        <div class="project-image" style="background: #FFFFFF; display: flex; align-items: flex-end; justify-content: center; height: 200px; border-radius: 10px; overflow: hidden;">
+                            <img src="assets/transamerica_wx_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
