--- a/ai-design.html
+++ b/ai-design.html
@@ -14,6 +14,8 @@
         .ai-hero-media .ai-media-stack { display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; max-width: 1050px; }
         .ai-hero-media .ai-media-stack img { max-width: 800px; width: 100%; height: auto; border-radius: 16px; box-shadow: var(--shadow-md); }
         .hero .hero-content h2 { padding-bottom: 16px; }
+        /* Ensure the link inside hero-content matches text-body-sm size */
+        .hero .hero-content .ai-note a { font-size: var(--text-sm); }
     </style>
 </head>
 <body>
@@ -52,8 +54,7 @@
                 <div class="hero-content">
                     <h2 class="text-heading-2">AI + Design: My process</h2>
                     <p class="text-body-lg">AI is baked into my process as a creative sidekick—not a replacement for creativity, which will always be uniquely mine. I use tools like ChatGPT, Gemini, Cursor, Figma Make, and V0 to elevate my design process, surface blind spots, and speed up the busy work. It’s a starting point that helps me reframe problems, analyze large data sets, and inspire my team to think more critically. For me, AI is an exciting frontier*—one that’s about building new habits, embracing experimentation, and slowing down to ask better questions. It’s also a powerful tool I incorporate directly into end-user experiences whenever I can**.</p>
-                    <p class="text-body-lg ai-note">*I designed my website with Cursor, Github, and Figma.<br><a href="https://github.com/tlainy">Take a look at my Github</a></p>
-                    <p class="text-body-lg ai-note">**I’ve placed 1st and 2nd in hackathons by creating user experiences powered by AI. Ask me about my hacks.</p>
+                    <p class="text-body-sm ai-note">*I designed my website with Cursor, Github, and Figma. <a href="https://github.com/tlainy">Take a look at my Github</a><br><br>**I’ve placed 1st and 2nd in hackathons by creating user experiences powered by AI. Ask me about my hacks 🛠️</p>
                 </div>
                 <div class="hero-media ai-hero-media">
                     <div class="ai-media-stack" aria-hidden="true">
